syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nikita.main";

service AnalyticsService {
  rpc CalculateCourierRating (CourierRatingRequest) returns (CourierRatingResponse) {}
}

message CourierRatingRequest {
  int64 courier_id = 1;
  int64 order_id = 2;
  string category = 3;
}

message CourierRatingResponse {
  int64 courier_id = 1;
  int32 rating_score = 2;
  string verdict = 3;
}
