package com.immortalidiot.main

import io.grpc.stub.StreamObserver
import org.springframework.grpc.server.service.GrpcService

@GrpcService
class AnalyticsServiceImpl : AnalyticsServiceGrpc.AnalyticsServiceImplBase() {

    override fun calculateCourierRating(
        request: CourierRatingRequest,
        responseObserver: StreamObserver<CourierRatingResponse>
    ) {
        // Ð¡Ð¸Ð¼ÑƒÐ»ÑÑ†Ð¸Ñ Ñ€Ð°ÑÑ‡ÐµÑ‚Ð° Ñ€ÐµÐ¹Ñ‚Ð¸Ð½Ð³Ð° ÐºÑƒÑ€ÑŒÐµÑ€Ð° Ð½Ð° Ð¾ÑÐ½Ð¾Ð²Ðµ Ð¸ÑÑ‚Ð¾Ñ€Ð¸Ð¸ Ð´Ð¾ÑÑ‚Ð°Ð²Ð¾Ðº
        val score = (Math.random() * 100).toInt()
        val verdict = when {
            score >= 80 -> "EXCELLENT"
            score >= 60 -> "GOOD"
            score >= 40 -> "AVERAGE"
            else -> "NEEDS_IMPROVEMENT"
        }

        val response = CourierRatingResponse.newBuilder()
            .setCourierId(request.courierId)
            .setRatingScore(score)
            .setVerdict(verdict)
            .build()

        println("ðŸ“Š Analytics: Calculated rating for courier ${request.courierId}: $score ($verdict)")

        responseObserver.onNext(response)
        responseObserver.onCompleted()
    }
}
